--- a/pay/index.html
+++ b/pay/index.html
@@ -90,7 +90,7 @@ font-size:70px;
   
   <div class="navbar-fixed hide-on-med-and-down">
   <nav>
-    <div class="nav-wrapper lime">
+    <div class="nav-wrapper color1">
       <a href="#" class="brand-logo center" id="title-header">Company Secure Billing</a>
     </div>
   </nav>
