--- a/pay/index.html
+++ b/pay/index.html
@@ -194,7 +194,7 @@ font-size:70px;
          <span class="card-title center">Done!</span>
          <br>
          <div class="row center">
-           <i class="large material-icons" style="font-size:200px;color:green">check</i>
+           <i class="large material-icons" style="font-size:200px;color:green">check_circle</i>
          </div>
          <br>
          <p class="center"><i>You are free to close this tab.</i></p>
