--- a/index.html
+++ b/index.html
@@ -1,8 +1,35 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta name="robots" content="noindex">
+    <base target="_top">
+    <title>Tutorials | Secure Payments by A2E Group</title>
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-170035025-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-170035025-1');
+    </script>
+    <style>
+    body {
+      border: none;
+      margin: 0px;
+      padding: 0px;
+    }
+    iframe { 
+      display: block;
+      background: #000;
+      border: none;
+      height: 100vh;
+      width: 100vw; 
+      margin: 0px;
+      padding: 0px;
+    }
+    </style>
   </head>
   <body>
+    <iframe src="https://a2egroup.wordpress.com/"></iframe>
   </body>
 </html>
