--- a/pay/index.html
+++ b/pay/index.html
@@ -5,6 +5,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <title>Pay | Secure Payments by A2E Group</title>
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
     <meta name="robots" content="noindex">
     <script>
     </script>
