--- a/tutorials/index.html
+++ b/tutorials/index.html
@@ -3,6 +3,7 @@
   <head>
     <base target="_top">
     <title>Tutorials | Secure Payments by A2E Group</title>
+    <meta name="robots" content="noindex">
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-170035025-1"></script>
