--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <base target="_top">
+    <meta name="robots" content="noindex">
     <title>Tutorials | Secure Payments by A2E Group</title>
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
     <!-- Global site tag (gtag.js) - Google Analytics -->
