--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <base target="_top">
     <meta name="robots" content="noindex">
-    <title>Tutorials | Secure Payments by A2E Group</title>
+    <title>Secure Payments and Automatic Billing by A2E Group</title>
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-170035025-1"></script>
