--- a/pay/index.html
+++ b/pay/index.html
@@ -127,8 +127,7 @@ font-size:70px;
        
        <div class="card-content black-text" id="screen1" hidden>
          <div class="row">
-           <div class="col s3 m4"></div>
-           <div clss="col s6 m4 center">
+           <div clss="col s12 center">
              <div class="preloader-wrapper big active">
       <div class="spinner-layer spinner-blue">
         <div class="circle-clipper left">
@@ -171,7 +170,6 @@ font-size:70px;
       </div>
     </div>
            </div>
-           <div class="col s3 m4"></div>
          </div>
          <p class="center"><i>Loading...</i></p>
        </div>
