--- a/pay/index.html
+++ b/pay/index.html
@@ -127,8 +127,8 @@ font-size:70px;
        
        <div class="card-content black-text" id="screen1" hidden>
          <div class="row">
-           <div clss="col s12 center-align">
-             <div class="preloader-wrapper big active center">
+           <div class="col s12 center-align">
+             <div class="preloader-wrapper big active">
       <div class="spinner-layer spinner-blue">
         <div class="circle-clipper left">
           <div class="circle"></div>
