--- a/pay/index.html
+++ b/pay/index.html
@@ -90,7 +90,7 @@ font-size:70px;
   <div id='main-screen' hidden>
   
   
-  <div class="navbar-fixed hide-on-med-and-down">
+  <div class="navbar-fixed hide-on-small-only">
   <nav>
     <div class="nav-wrapper color1">
       <a href="#" class="brand-logo center" id="title-header">Company Secure Billing</a>
@@ -98,7 +98,7 @@ font-size:70px;
   </nav>
   </div>
   
-  <div class="center hide-on-large-only color1"><br><h1 class="color2">Company Secure Billing</h1><br></div>
+  <div class="center hide-on-med-and-down color1"><br><h1 class="color2">Company Secure Billing</h1><br></div>
   
   <br>
   
