--- a/pay/index.html
+++ b/pay/index.html
@@ -98,7 +98,7 @@ font-size:70px;
   </nav>
   </div>
   
-  <div class="center hide-on-med-and-down color1"><br><h1 class="color2">Company Secure Billing</h1><br></div>
+  <div class="center hide-on-med-and-up color1"><br><h1 class="color2">Company Secure Billing</h1><br></div>
   
   <br>
   
@@ -112,15 +112,15 @@ font-size:70px;
        </div>
        
        <div class="card-content black-text" id="screen0">
-         <span class="card-title hide-on-med-and-down">Confirm Email Address:</span>
-         <span class="card-title hide-on-large-only"><h3>Confirm Email Address:</h3></span>
+         <span class="card-title hide-on-small-only">Confirm Email Address:</span>
+         <span class="card-title hide-on-med-and-up"><h3>Confirm Email Address:</h3></span>
          <br>
          <label for="email">Email</label>
          <input id="email" type="email" class="validate">
          <i style="color:red" id="email-error" hidden>Invalid email: Please enter the email to which you were sent your bill.</i>
          <br>
-         <a class="waves-effect waves-light btn-large right hide-on-large-only color2 color1" onclick="submit()"><h5><i class="material-icons left">verified_user</i>Submit</h5></a>
-         <a class="waves-effect waves-light btn-small right hide-on-med-and-down color2 color1" onclick="submit()"><i class="material-icons left">verified_user</i>Submit</a>
+         <a class="waves-effect waves-light btn-large right hide-on-med-and-up color2 color1" onclick="submit()"><h5><i class="material-icons left">verified_user</i>Submit</h5></a>
+         <a class="waves-effect waves-light btn-small right hide-on-small-only color2 color1" onclick="submit()"><i class="material-icons left">verified_user</i>Submit</a>
          <br>
          <br>
        </div>
